--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Политика конфиденциальности — Ваша компания</title>
+  <style>
+    body {
+      font-family: system-ui, sans-serif;
+      background: #f9fafb;
+      color: #333;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    header {
+      background: #1f2937;
+      color: white;
+      padding: 1rem 2rem;
+      text-align: center;
+    }
+    main {
+      max-width: 800px;
+      margin: 2rem auto;
+      background: white;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    h1, h2 {
+      color: #111827;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background: #f3f4f6;
+      color: #6b7280;
+      margin-top: 2rem;
+    }
+    a {
+      color: #2563eb;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Sauda Technologies</h1>
+  </header>
+  <main>
+    <h2>Политика конфиденциальности</h2>
+    <p>
+      Здесь разместите текст вашей политики конфиденциальности. Опишите, какие данные вы собираете, как их используете и как можно связаться с вами.
+    </p>
+
+    <h2>Контакты</h2>
+    <p>
+      ТОО «Sauda Technologies»<br>
+      Email: <a href="mailto:info@company.com">sauda_tech@outlook.com</a><br>
+      Телефон: +7 (999) 123-45-67<br>
+      Адрес: Астана, ул. Заебись, д. 1
+    </p>
+  </main>
+  <footer>
+    &copy; 2025 Ваша компания. Все права защищены.
+  </footer>
+</body>
+</html>
 
