--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ТОО "Sauda Technologies" — Политика конфиденциальности</title>
-
+  <meta name="google-site-verification" content="l8Nt3ihXNZnz-hoDVlzmxAmu1fke7HiFfA5PiV_y4Jc" />
   <meta name="description" content="Политика конфиденциальности B2B-маркетплейса EasySauda — ТОО Sauda Technologies. Контакты: sauda_tech@outlook.com" />
   <meta property="og:title" content="ТОО 'Sauda Technologies' — Политика конфиденциальности" />
   <meta property="og:description" content="B2B рынок в надежных руках — Политика конфиденциальности EasySauda" />
@@ -147,7 +147,7 @@
 
         <ol>
           <li>
-            <strong>Общие положения</strong>
+            <strong>1. Общие положения</strong>
             <ol>
               <li>1.1. Настоящая Политика конфиденциальности (далее — «Политика") определяет порядок сбора, хранения, обработки и передачи персональных данных пользователей сервиса «EasySauda» (далее — «Сервис»), включая веб-платформу для Дистрибьюторов и мобильное приложение для Торговых точек.</li>
               <li>1.2. Оператором персональных данных является:
@@ -173,7 +173,7 @@
           </li>
 
           <li>
-            <strong>Архитектура Сервиса и роли пользователей</strong>
+            <strong>2. Архитектура Сервиса и роли пользователей</strong>
             <ol>
               <li>2.1. Сервис EasySauda является B2B-маркетплейсом, предназначенным для взаимодействия между Дистрибьюторами и Торговыми точками (Покупателями).</li>
               <li>Дистрибьютор (веб-версия) — осуществляет прием и обработку заявок, ведение клиентской базы, управление каталогом, ценами, акциями и аналитикой.</li>
@@ -183,7 +183,7 @@
           </li>
 
           <li>
-            <strong>Сбор и обработка персональных данных</strong>
+            <strong>3. Сбор и обработка персональных данных</strong>
             <ol>
               <li>
                 <em>3.1. Данные Дистрибьюторов (веб-платформа)</em>
@@ -206,12 +206,12 @@
           </li>
 
           <li>
-            <strong>Использование разрешений мобильного приложения</strong>
-            <p>На данный момент приложение не использует разрешений.</p>
+            <strong>4. Использование разрешений мобильного приложения</strong>
+            <p>4.1. На данный момент приложение не использует разрешений.</p>
           </li>
 
           <li>
-            <strong>Передача персональных данных третьим лицам</strong>
+            <strong>5. Передача персональных данных третьим лицам</strong>
             <ol>
               <li>5.1. Сервис передает персональные данные только в объеме, необходимом для исполнения функций Сервиса: — данные Торговой точки передаются выбранному Дистрибьютору при оформлении заказа; — данные Дистрибьютора (наименование, контакты) становятся доступны Торговой точке для связи и согласования. В течение 10 (десяти) рабочих дней с момента передачи Оператор уведомляет Пользователя о факте передачи (по e-mail или в интерфейсе Сервиса).</li>
               <li>5.2. Платформа не продает и не передает персональные данные третьим лицам в коммерческих целях.</li>
@@ -220,7 +220,7 @@
           </li>
 
           <li>
-            <strong>Хранение и защита данных</strong>
+            <strong>6. Хранение и защита данных</strong>
             <ol>
               <li>6.1. Все персональные данные хранятся на защищенных серверах, расположенных на территории Республики Казахстан или в странах, обеспечивающих адекватную защиту персональных данных.</li>
               <li>6.2. Оператор принимает технические и организационные меры для защиты данных от утраты, несанкционированного доступа, изменения или уничтожения. Передача персональных данных, в том числе при работе мобильного приложения, осуществляется по защищенным протоколам.</li>
@@ -229,7 +229,7 @@
           </li>
 
           <li>
-            <strong>Права субъекта персональных данных</strong>
+            <strong>7. Права субъекта персональных данных</strong>
             <ol>
               <li>7.1. Пользователь имеет право: получать информацию о своих персональных данных, обрабатываемых Оператором; требовать уточнения, блокирования или уничтожения данных, если они являются неполными, устаревшими или незаконно полученными; отзывать согласие на обработку персональных данных; инициировать удаление аккаунта через мобильное приложение или по запросу на e-mail sauda_tech@outlook.com. Запросы обрабатываются в течение 10 (десяти) рабочих дней с момента получения. Уведомление о результате направляется Пользователю по e-mail или в интерфейсе Сервиса.</li>
               <li>7.2. После удаления аккаунта данные Пользователя уничтожаются, за исключением сведений, подлежащих хранению в соответствии с законодательством Республики Казахстан (например, данные о финансовых операциях и накладных).</li>
@@ -237,17 +237,17 @@
           </li>
 
           <li>
-            <strong>Международная передача данных</strong>
+            <strong>8. Международная передача данных</strong>
             <p>8.1. В случае использования облачных сервисов и систем аналитики, расположенных за пределами Республики Казахстан, передача персональных данных осуществляется только при условии соблюдения принципов защиты, эквивалентных казахстанскому законодательству.</p>
           </li>
 
           <li>
-            <strong>Срок хранения данных</strong>
+            <strong>9. Срок хранения данных</strong>
             <p>9.1. Персональные данные хранятся в течение срока действия учетной записи и не более 3 (трех) лет после её удаления, если иное не предусмотрено законодательством Республики Казахстан (например, для целей бухгалтерского, налогового учета или исполнения судебных актов).</p>
           </li>
 
           <li>
-            <strong>Обновления и изменения Политики</strong>
+            <strong>10. Обновления и изменения Политики</strong>
             <ol>
               <li>10.1. Оператор оставляет за собой право изменять настоящую Политики. Актуальная версия всегда доступна в мобильном приложении.</li>
               <li>10.2. Продолжение использования Сервиса после публикации обновленной версии Политики означает согласие с её условиями.</li>
@@ -255,7 +255,7 @@
           </li>
 
           <li>
-            <strong>Реквизиты оператора</strong>
+            <strong>11. Реквизиты оператора</strong>
             <pre>Оператор Платформы: ТОО «Sauda Technologies"
 БИН / ИИН: 251040031022
 Юридический адрес: Казахстан, город Астана, район Есиль, улица Әлихан Бөкейхан, дом 11, почтовый индекс 010000
@@ -264,7 +264,7 @@
           </li>
 
           <li>
-            <strong>Контакт для обращений</strong>
+            <strong>12. Контакт для обращений</strong>
             <p>Все вопросы, связанные с обработкой, изменением или удалением персональных данных, направляются на электронный адрес: <a href="mailto:sauda_tech@outlook.com">sauda_tech@outlook.com</a></p>
           </li>
         </ol>
