--- a/index.html
+++ b/index.html
@@ -259,8 +259,7 @@
             <pre>Оператор Платформы: ТОО «Sauda Technologies"
 БИН / ИИН: 251040031022
 Юридический адрес: Казахстан, город Астана, район Есиль, улица Әлихан Бөкейхан, дом 11, почтовый индекс 010000
-Электронная почта: sauda_tech@outlook.com
-Веб-сайт: https://EasySauda.kz</pre>
+Электронная почта: sauda_tech@outlook.com </pre>
           </li>
 
           <li>
